force-app/main/default/objects/Contact/fields/KDCE_MGMCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MGMCode__c</fullName>
    <description>MGM Coupon Code</description>
    <externalId>true</externalId>
    <inlineHelpText>[KDCE] MGM 친구 추천인 코드</inlineHelpText>
    <label>MGM Coupon Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>