force-app/main/default/objects/Contact/fields/KDCE_Mig_Delete__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Mig_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mig Delete</label>
    <type>Checkbox</type>
</CustomField>