force-app/main/default/objects/Contact/fields/KDCE_MobileCarrier__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MobileCarrier__c</fullName>
    <label>Mobile Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SKT</fullName>
            </value>
            <value>
                <fullName>KT</fullName>
            </value>
            <value>
                <fullName>LGT</fullName>
            </value>
            <value>
                <fullName>SKT_MVNO</fullName>
            </value>
            <value>
                <fullName>KT_MVNO</fullName>
            </value>
            <value>
                <fullName>LGT_MVNO</fullName>
            </value>
            <value>
                <fullName>ETC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>