force-app/main/default/objects/Contact/fields/KDCE_Name__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Name__c</fullName>
    <description>마스킹 처리가 안된 이름 저장</description>
    <externalId>true</externalId>
    <label>Name (No Mask)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>