force-app/main/default/objects/Contact/fields/KDCE_NameEMKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NameEMKey__c</fullName>
    <description>[KDCE] Record Key 이름_Email</description>
    <externalId>true</externalId>
    <label>Contact Key (Name, Email)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>