force-app/main/default/objects/Contact/fields/KDCE_NamePNBDKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NamePNBDKey__c</fullName>
    <description>[KDCE] Record Key 이름_전화번호_생년월일</description>
    <externalId>true</externalId>
    <label>Contact Key (Name, Phone Number, BD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>