force-app/main/default/objects/Contact/fields/KDCE_NamePNEMKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NamePNEMKey__c</fullName>
    <description>[KDCE] Record Key 이름_전화번호_이메일</description>
    <externalId>true</externalId>
    <label>Contact Key (Name, Phone Number, Email)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>