force-app/main/default/objects/Contact/fields/KDCE_NamePNKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NamePNKey__c</fullName>
    <description>[KDCE] Record Key 이름_전화번호</description>
    <externalId>true</externalId>
    <label>Contact Key (Name, Phone Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>