force-app/main/default/objects/Contact/fields/KDCE_OldInformationOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OldInformationOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Old Information Opt-in</description>
    <label>Old Information Opt-in</label>
    <type>Checkbox</type>
</CustomField>