force-app/main/default/objects/Contact/fields/KDCE_OldMarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OldMarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Old Marketing Opt-in</description>
    <label>Old Marketing Opt-in</label>
    <type>Checkbox</type>
</CustomField>