force-app/main/default/objects/Contact/fields/KDCE_PhoneMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_PhoneMask__c</fullName>
    <description>[KDCE] Phone Masking Field</description>
    <label>Phone(Mask)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>