force-app/main/default/objects/Contact/fields/KDCE_PNKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_PNKey__c</fullName>
    <description>[KDCE] Record Key 전화번호</description>
    <externalId>true</externalId>
    <label>Contact Key (Phone Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>