force-app/main/default/objects/Contact/fields/KDCE_QUREAccessToken__c.field-meta.xml
<CustomField>
    <fullName>KDCE_QUREAccessToken__c</fullName>
    <label>QURE Access Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>