force-app/main/default/objects/Contact/fields/KDCE_ReactivateDormantDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ReactivateDormantDate__c</fullName>
    <description>[KDCE] Reactivate Dormant Date</description>
    <label>Reactivate Dormant Date</label>
    <type>DateTime</type>
</CustomField>