force-app/main/default/objects/Contact/fields/KDCE_RegistrationChannel__c.field-meta.xml
<CustomField>
    <fullName>KDCE_RegistrationChannel__c</fullName>
    <description>[KDCE] Registration Channel</description>
    <inlineHelpText>Registration Channel</inlineHelpText>
    <label>Registration Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GetInfo</fullName>
            </value>
            <value>
                <fullName>EasyIqos</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
                <default>true</default>
                <label>SC</label>
            </value>
            <value>
                <fullName>iqos.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>