force-app/main/default/objects/Contact/fields/KDCE_RegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_RegistrationDate__c</fullName>
    <description>[KDCE] 고객 등록 시간</description>
    <label>Registration Date</label>
    <type>DateTime</type>
</CustomField>