force-app/main/default/objects/Contact/fields/KDCE_RentalConsumer__c.field-meta.xml
<CustomField>
    <fullName>KDCE_RentalConsumer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Rental 진행 중 여부 체크</description>
    <label>Rental Consumer</label>
    <type>Checkbox</type>
</CustomField>