force-app/main/default/objects/Contact/fields/KDCE_Store__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] 인입 채널</description>
    <label>Store</label>
    <referenceTo>KDCE_Store__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Anonymous</relationshipName>
    <type>Lookup</type>
</CustomField>