force-app/main/default/objects/Contact/fields/KDCE_TnCVersion__c.field-meta.xml
<CustomField>
    <fullName>KDCE_TnCVersion__c</fullName>
    <description>[KDCE] T&amp;C Version  T&amp;C 동의시 버젼이 바뀌면 이전 정보 제거한다.</description>
    <externalId>true</externalId>
    <label>T&amp;C Version</label>
    <length>18</length>
    <type>Text</type>
</CustomField>