force-app/main/default/objects/Contact/fields/KDCE_TokenExpireTime__c.field-meta.xml
<CustomField>
    <fullName>KDCE_TokenExpireTime__c</fullName>
    <label>QURE Access Token Expire Time</label>
    <type>DateTime</type>
</CustomField>