force-app/main/default/objects/Contact/recordTypes/Contact_Anonymous.recordType-meta.xml
<RecordType>
    <fullName>Contact_Anonymous</fullName>
    <active>true</active>
    <description>[KDCE]</description>
    <label>Anonymous</label>
</RecordType>