force-app/main/default/objects/Contact/recordTypes/Contact_Member.recordType-meta.xml
<RecordType>
    <fullName>Contact_Member</fullName>
    <active>true</active>
    <description>[KDCE]</description>
    <label>Member</label>
</RecordType>