force-app/main/default/objects/Contact/recordTypes/Contact_Prospect.recordType-meta.xml
<RecordType>
    <fullName>Contact_Prospect</fullName>
    <active>true</active>
    <description>[KDCE]</description>
    <label>Prospect</label>
</RecordType>