force-app/main/default/objects/Contact/validationRules/Validate_KDCE_LASLAU_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_KDCE_LASLAU_Value</fullName>
    <active>false</active>
    <description>Value for KDCE_LASLAU__c field cannot be converted from LAU to LAS or None.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(PRIORVALUE(KDCE_LASLAU__c), &quot;LAU&quot;), 
				OR (
								ISPICKVAL(KDCE_LASLAU__c, &quot;LAS&quot;), 
								ISPICKVAL(KDCE_LASLAU__c, &quot;&quot;)
				)
)</errorConditionFormula>
    <errorMessage>Value for Consumer Sub Type cannot be converted from LAU to LAS or None.</errorMessage>
</ValidationRule>