force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>KDCE_PhoneMask__c</columns>
    <columns>KDCE_EmailMask__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>KDCE_LASLAU__c</columns>
    <columns>KDCE_ExternalId__c</columns>
    <columns>KDCE_RegistrationChannel__c</columns>
    <columns>KDCE_RegistrationDate__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>모든 연락처</label>
</ListView>