force-app/main/default/objects/Contact/listViews/AllProspect.listView-meta.xml
<ListView>
    <fullName>AllProspect</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>KDCE_fm_ConsumerType__c</columns>
    <columns>KDCE_LASLAU__c</columns>
    <columns>KDCE_ExternalId__c</columns>
    <columns>KDCE_RegistrationChannel__c</columns>
    <columns>KDCE_RegistrationDate__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Contact_Prospect</value>
    </filters>
    <label>All Prospect</label>
</ListView>