force-app/main/default/objects/Contact/listViews/MyContact.listView-meta.xml
<ListView>
    <fullName>MyContact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>내 연락처</label>
</ListView>